--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 ---
 language: node_js
 node_js:
-  # we recommend testing addons with the same minimum supported node version as Ember CLI
-  # so that your addon works for all apps
-  - "4"
+  - "8"
 
-sudo: false
+sudo: required
 dist: trusty
 
 addons:
@@ -19,15 +17,9 @@ env:
     # See https://git.io/vdao3 for details.
     - JOBS=1
   matrix:
-    # we recommend new addons test the current and previous LTS
-    # as well as latest stable release (bonus points to beta/canary)
-    - EMBER_TRY_SCENARIO=ember-lts-2.12
-    - EMBER_TRY_SCENARIO=ember-lts-2.16
-    - EMBER_TRY_SCENARIO=ember-lts-2.18
-    - EMBER_TRY_SCENARIO=ember-release
-    - EMBER_TRY_SCENARIO=ember-beta
-    - EMBER_TRY_SCENARIO=ember-canary
-    - EMBER_TRY_SCENARIO=ember-default
+    - SCRIPT=test:all
+    # - SCRIPT=test:fastboot
+    # - SCRIPT=test:node
 
 matrix:
   fast_finish: true
@@ -35,14 +27,20 @@ matrix:
     - env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
+  - sudo chown root /opt/google/chrome/chrome-sandbox
+  - sudo chmod 4755 /opt/google/chrome/chrome-sandbox
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH=$HOME/.yarn/bin:$PATH
+  - yarn global add greenkeeper-lockfile@1
 
 install:
   - yarn install --no-lockfile --non-interactive
 
+before_script:
+  - greenkeeper-lockfile-update
+
 script:
-  - yarn lint:js
-  # Usually, it's ok to finish the test scenario without reverting
-  #  to the addon's original dependency state, skipping "cleanup".
-  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO --skip-cleanup
+  - yarn run $SCRIPT
+
+after_script:
+  - greenkeeper-lockfile-upload
