--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-fetch-jsonp",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Adds importable fetch-jsonp to ember apps",
   "keywords": [
     "ember-addon"
   ],
@@ -16,10 +16,15 @@
     "build": "ember build",
     "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
     "start": "ember serve",
-    "test": "ember try:each"
+    "test": "ember try:each",
+    "test:all": "ember try:testall"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.6.0"
+    "broccoli-funnel": "^2.0.1",
+    "broccoli-merge-trees": "^3.0.0",
+    "ember-cli-babel": "^6.6.0",
+    "fastboot-transform": "^0.1.3",
+    "fetch-jsonp": "^1.1.3"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -50,6 +55,9 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "versionCompatibility": {
+      "ember": ">2.15.0"
+    }
   }
 }
