--- a/package.json
+++ b/package.json
@@ -19,36 +19,36 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "broccoli-funnel": "^2.0.1",
-    "broccoli-merge-trees": "^3.0.0",
-    "ember-cli-babel": "^6.6.0",
-    "fastboot-transform": "^0.1.3",
-    "fetch-jsonp": "^1.1.3"
+    "broccoli-funnel": "2.0.1",
+    "broccoli-merge-trees": "3.0.0",
+    "ember-cli-babel": "6.6.0",
+    "fastboot-transform": "0.1.3",
+    "fetch-jsonp": "1.1.3"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^3.0.0",
-    "ember-cli": "~3.3.0",
-    "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.2.1",
-    "ember-cli-htmlbars": "^2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
-    "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.1.1",
-    "ember-cli-shims": "^1.2.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
-    "ember-disable-prototype-extensions": "^1.1.2",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^5.0.0",
-    "ember-source": "~3.3.1",
-    "ember-source-channel-url": "^1.0.1",
-    "ember-try": "^1.0.0-beta.3",
-    "eslint-plugin-ember": "^5.0.0",
-    "eslint-plugin-node": "^7.0.1",
-    "loader.js": "^4.2.3"
+    "broccoli-asset-rev": "2.4.5",
+    "ember-ajax": "3.0.0",
+    "ember-cli": "3.3.0",
+    "ember-cli-dependency-checker": "2.0.0",
+    "ember-cli-eslint": "4.2.1",
+    "ember-cli-htmlbars": "2.0.1",
+    "ember-cli-htmlbars-inline-precompile": "1.0.0",
+    "ember-cli-inject-live-reload": "1.4.1",
+    "ember-cli-qunit": "4.1.1",
+    "ember-cli-shims": "1.2.0",
+    "ember-cli-sri": "2.1.0",
+    "ember-cli-uglify": "2.0.0",
+    "ember-disable-prototype-extensions": "1.1.2",
+    "ember-export-application-global": "2.0.0",
+    "ember-load-initializers": "1.0.0",
+    "ember-maybe-import-regenerator": "0.1.6",
+    "ember-resolver": "5.0.0",
+    "ember-source": "3.3.1",
+    "ember-source-channel-url": "1.0.1",
+    "ember-try": "1.0.0-beta.3",
+    "eslint-plugin-ember": "5.0.0",
+    "eslint-plugin-node": "7.0.1",
+    "loader.js": "4.2.3"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
