--- a/.travis.yml
+++ b/.travis.yml
@@ -32,16 +32,15 @@ before_install:
   - sudo chmod 4755 /opt/google/chrome/chrome-sandbox
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH=$HOME/.yarn/bin:$PATH
-  - yarn global add greenkeeper-lockfile
 
 install:
   - yarn install --no-lockfile --non-interactive
 
 before_script:
-  - greenkeeper-lockfile-update
+  - ./node_modules/.bin/greenkeeper-lockfile-update
 
 script:
   - yarn run $SCRIPT
 
 after_script:
-  - greenkeeper-lockfile-upload
+  - ./node_modules/.bin/greenkeeper-lockfile-upload
