--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-fetch-jsonp",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Adds importable fetch-jsonp to ember apps",
   "keywords": [
     "ember-addon"
@@ -48,6 +48,7 @@
     "ember-try": "1.0.0-beta.3",
     "eslint-plugin-ember": "5.0.0",
     "eslint-plugin-node": "7.0.1",
+    "greenkeeper-lockfile": "^1.15.1",
     "loader.js": "4.2.3"
   },
   "engines": {
