--- a/package.json
+++ b/package.json
@@ -13,24 +13,27 @@
   },
   "repository": "Duder-onomy/ember-fetch-jsonp",
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
     "start": "ember serve",
-    "test": "ember try:each"
+    "test": "npm-run-all lint:* test:*",
+    "test:ember": "ember test",
+    "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
     "broccoli-funnel": "2.0.2",
     "broccoli-merge-trees": "4.2.0",
-    "ember-cli-babel": "7.18.0",
+    "ember-cli-babel": "7.19.0",
     "fastboot-transform": "0.1.3",
     "fetch-jsonp": "1.1.3"
   },
   "devDependencies": {
+    "@glimmer/tracking": "^1.0.0",
     "broccoli-asset-rev": "3.0.0",
-    "ember-cli": "3.15.1",
+    "ember-cli": "3.18.0",
     "ember-cli-dependency-checker": "3.2.0",
-    "ember-cli-eslint": "5.1.0",
-    "ember-cli-htmlbars": "4.2.2",
+    "ember-cli-htmlbars": "4.3.1",
     "ember-cli-htmlbars-inline-precompile": "3.0.1",
     "ember-cli-inject-live-reload": "2.0.2",
     "ember-cli-qunit": "4.4.0",
@@ -41,17 +44,20 @@
     "ember-export-application-global": "2.0.1",
     "ember-load-initializers": "2.1.1",
     "ember-maybe-import-regenerator": "0.1.6",
-    "ember-resolver": "7.0.0",
-    "ember-source": "3.16.3",
+    "ember-resolver": "8.0.0",
+    "ember-source": "3.18.0",
     "ember-source-channel-url": "2.0.1",
+    "ember-template-lint": "^2.6.0",
     "ember-try": "1.4.0",
-    "eslint-plugin-ember": "7.9.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-ember": "8.4.0",
     "eslint-plugin-node": "11.1.0",
     "greenkeeper-lockfile": "^1.15.1",
-    "loader.js": "4.7.0"
+    "loader.js": "4.7.0",
+    "npm-run-all": "^4.1.5"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "10.* || >= 12"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
