--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-fetch-jsonp",
   "version": "1.3.0",
-  "description": "Adds importable fetch-jsonp to ember apps",
+  "description": "DEPRECATED Adds importable fetch-jsonp to ember apps",
   "keywords": [
     "ember-addon"
   ],
